Moving repeating style rules into the global file. Also testing spacing in mobile and tablet then fixing them as I notice what needs fixing.

--- a/css/index.css
+++ b/css/index.css
@@ -236,30 +236,52 @@ body {
 }
 html,
 body {
-  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto', sans-serif;*/
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Indie Flower', cursive;
+  /* font-family: 'Indie Flower', cursive; */
 }
 h1 {
-  font-size: 4rem;
+  /* font-size: 4rem; */
 }
 h2 {
-  font-size: 3.2rem;
+  /* font-size: 3.2rem; */
   padding-bottom: 10px;
 }
 h4 {
-  font-size: 2.5rem;
-  padding-bottom: 10px;
+  /* font-size: 2.5rem; */
+  /* padding-bottom: 10px; */
+}
+a {
+  font-size: 2.7rem;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+}
+@media (max-width: 1000px) {
+  a {
+    font-size: 2rem;
+  }
 }
 p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
+  color: #fff;
+  font-size: 2.7rem;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+}
+@media (max-width: 500px) {
+  p {
+    font-size: 2.7rem;
+  }
+}
+@media (max-width: 1000px) {
+  p {
+    font-size: 2rem;
+  }
 }
 img {
   width: 100%;
@@ -292,6 +314,11 @@ img {
     width: 65%;
   }
 }
+@media (max-width: 1000px) {
+  .container .main-content .left {
+    padding: 2rem;
+  }
+}
 .container .main-content .left h1 {
   margin: 0 0 2rem;
   font-family: 'Anton', sans-serif;
@@ -304,8 +331,7 @@ img {
   margin: 0 0 1rem;
 }
 .container .main-content .left p {
-  font-size: 2.7rem;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
+  /* .banana()*/
 }
 .container .main-content .left ul {
   line-height: 3.5rem;
@@ -322,10 +348,6 @@ img {
 }
 .container .main-content .about-left img {
   margin: 0 0 2rem;
-}
-.container .main-content .about-left p {
-  font-size: 2.7rem;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 .container .main-content .right {
   width: 25%;
@@ -348,11 +370,6 @@ img {
 .container .main-content .right address a {
   color: #fff;
 }
-.container .main-content .right p,
-.container .main-content .right a {
-  font-size: 2.7rem;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
-}
 .container .main-content .right ul {
   line-height: 3.5rem;
 }
@@ -365,10 +382,6 @@ img {
     width: 100%;
     padding: 1rem 0;
   }
-}
-.container .main-content .about-right p {
-  font-size: 2.7rem;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 .container .main-content .products {
   width: 100%;
@@ -395,10 +408,6 @@ img {
 }
 .container .main-content .products .accessories {
   flex: 1.5023;
-}
-.container .main-content .products p {
-  font-size: 2.7rem;
-  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 .container .main-content h1,
 .container .main-content h2,
@@ -438,10 +447,6 @@ img {
   font-family: 'Yanone Kaffeesatz', sans-serif;
   color: #fff;
 }
-.container .main-content p {
-  /* consider moving this to global */
-  color: #fff;
-}
 @media (max-width: 500px) {
   .container .main-content {
     /* what is this all about? */
@@ -458,7 +463,7 @@ img {
     padding: 3rem;
   }
   .container .main-content .left h2 {
-    display: none;
+    /* display: none; */
   }
   .container .main-content .left h3 {
     margin: 2rem 0 2rem;
