--- a/less/global.less
+++ b/less/global.less
@@ -11,31 +11,40 @@
   }
 
   html, body {
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Roboto', sans-serif;*/
   }
   
   h1, h2, h3, h4, h5 {
-    font-family: 'Indie Flower', cursive;
+    /* font-family: 'Indie Flower', cursive; */
   }
   
   h1 {
-    font-size: 4rem;
+    /* font-size: 4rem; */
   }
   
   h2 {
-    font-size: 3.2rem;
+    /* font-size: 3.2rem; */
     padding-bottom: 10px;
   }
   
   h4 {
-    font-size: 2.5rem;
-    padding-bottom: 10px;
+    /* font-size: 2.5rem; */
+    /* padding-bottom: 10px; */
   }
   
+  a {
+    .banana();
+    @media @tablet {font-size: 2rem;}
+  }
+
   p {
     line-height: 1.5;
     font-size: 1.6rem;
     padding-bottom: 10px;
+    color: @font-styles;
+    .banana();
+    @media @mobile {font-size: 2.7rem;}
+    @media @tablet {font-size: 2rem;}
   }
   
   img {
