--- a/less/main-content.less
+++ b/less/main-content.less
@@ -12,6 +12,7 @@
 			width: 70%;
 			padding: 5rem;
 			@media @tablet {width: 65%;}
+			@media @tablet {padding: 2rem;}
 	
 			h1 {
 				margin: 0 0 2rem;
@@ -28,7 +29,7 @@
 			}
 
 			p {
-				.banana()
+				/* .banana()*/
 			}
 
 			ul {
@@ -46,10 +47,6 @@
 
 			img {
 				margin: 0 0 2rem;
-			}
-
-			p {
-				.banana()
 			}
 		}
 
@@ -72,10 +69,6 @@
 				color: @font-styles;
 			}
 
-			p, a {
-				.banana()
-			}
-
 			ul {
 				line-height: 3.5rem;
 			}
@@ -87,10 +80,6 @@
 			@media @mobile {
 				width: 100%;
 				padding: 1rem 0;
-			}
-
-			p {
-				.banana()
 			}
 		}
 
@@ -117,10 +106,6 @@
 			}
 			.accessories {
 				flex: 1.5023;
-			}
-
-			p {
-				.banana();
 			}
 		}
 
@@ -156,11 +141,6 @@
 			color: @font-styles;
 		}
 
-		p {
-			/* consider moving this to global */
-			color: @font-styles;
-        }
-
         @media  @mobile { 
 			/* what is this all about? */
 			padding: @mobile-padding;
@@ -178,7 +158,7 @@
 			}
 
 			.left h2 {
-				display: none;
+				/* display: none; */
 			}
 		
 			.left h3 {
